@@ -61,6 +61,11 @@
             href="http://trac.cyberduck.ch/ticket/5539">#5539</a>)
     </li>
     <li>[Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)</li>
+    <li>[Feature] Skip option not available in transfer prompt [<a
+            href="http://trac.cyberduck.ch/ticket/1159">#1159</a>]</li>
+    <li>[Feature] Access for AWS Identity and Access Management (IAM) users (<a
+            href="http://trac.cyberduck.ch/ticket/5731">#5731</a>) (S3)
+    </li>
     <li>[Bugfix] Qeued transfers start in random order (#5632)</li>
     <li>[Bugfix] Dragging into topmost folder in browser (<a
             href="http://trac.cyberduck.ch/ticket/1945">#1945</a>)
@@ -87,9 +92,6 @@
     </li>
     <li>[Bugfix] Preserve symbolic links in uploads (<a
             href="http://trac.cyberduck.ch/ticket/1860">#1860</a>) (SFTP)
-    </li>
-    <li>[Bugfix] Access for AWS Identity and Access Management (IAM) users (<a
-            href="http://trac.cyberduck.ch/ticket/5731">#5731</a>) (S3)
     </li>
 </ul>
 
