@@ -1,8 +1,9 @@
 4.0 [http://trac.cyberduck.ch/milestone/4.0]
 - [Localize] Ukrainian Localization
 - [Feature] Invalidation (Purge) of files in CDN (Cloudfiles/Akamai)
+- [Feature] Skip option not available in transfer prompt [#1159]
+- [Feature] Access for AWS Identity and Access Management (IAM) users (#5731) (S3)
 - [Bugfix] Preserve symbolic links in transfers (#1860) (SFTP)
-- [Bugfix] Access for AWS Identity and Access Management (IAM) users (#5731) (S3)
 
 4.0b9 [http://trac.cyberduck.ch/milestone/4.0b9]
 - [Feature] Multipart Uploads with parallelism (S3) (#5487)
